--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -32,13 +32,13 @@ The form factors by Pucket et al.~\cite{puckett10} are used in this study and it
 \subsubsection{Nuclear Amplitude}
 \label{sec:cni nuclear}
 
-Very few conclusions can be made on the nuclear amplitude from first principles (QCD). Instead, several phenomenology or theory motivated descriptions will outlined here. The choice will be critically discussed later in Section~\ref{sec:cni task discussion}.
+Very few conclusions can be made on the nuclear amplitude from first principles (QCD). Instead, several phenomenology or theory motivated descriptions will outlined here. The choice will be critically discussed in Section~\ref{sec:cni task discussion}.
 
 %--------------------
 \vskip3mm
 \hbox to\hsize{\bf Modulus\hfil}
 
-At $|t| \gtrsim 0.02\un{GeV^2}$ the effects due to the Coulomb interaction are not expected to be large (c.f.~Figure~\ref{fig:cni effect}). Thus, the measured cross-section can be -- to large extent -- attributed to the nuclear component. Following Table~\ref{tab:data} and especially \cite{8tev-90m} which presents high-precision data for $|t| < 0.2\un{GeV^2}$, it is reasonable to parametrise the nuclear modulus as
+At $|t| \gtrsim 0.02\un{GeV^2}$ the effects due to the Coulomb interaction are not expected to be large (c.f.~Figure~\ref{fig:cni effect}). Thus, the measured cross-section can be -- to a large extent -- attributed to the nuclear component. Following Table~\ref{tab:data} and especially \cite{8tev-90m} which presents high-precision data for $|t| < 0.2\un{GeV^2}$, it is reasonable to parametrise the nuclear modulus as
 \begin{equation}
 \label{eq:nuc mod}
 \left | {\cal A}^{\rm N}(t) \right | = a \exp\left( \sum\limits_{n = 1}^{N_b} b_n\, t^n \right)\ ,
@@ -85,7 +85,7 @@ Another parametrisation is by {\em Bailly et al.}~\cite{bailly87}:
 	%\arg {\cal A}^{\rm N}(t) = {\pi\over 2} - \arctan {\rho_0\over 1 - {t\over t_{\rm d}}},\ \rho_0 = {1\over \tan p_0}
 	\arg {\cal A}^{\rm N}(t) = \arctan \left[ \tan p_0 \left(1 - {t\over t_{\rm d}} \right) \right]\ ,
 \end{equation}
-where $p_0$ determines the phase value at $t=0$ and $t_{\rm d} \approx -0.53\un{GeV^2}$ gives the position of the diffractive minimum at $8\un{TeV}$ (preliminary result derived from the $\beta^* = 90\un{m}$ data \cite{8tev-90m}). This phase has behaviour qualitatively similar to the model of Jenskovszky et al., see Figure~\ref{fig:phase illustration}.
+where $p_0$ determines the phase value at $t=0$ and $t_{\rm d} \approx -0.53\un{GeV^2}$ gives the position of the diffractive minimum at $8\un{TeV}$ (preliminary result derived from the $\beta^* = 90\un{m}$ data \cite{8tev-90m}). This phase has a behaviour qualitatively similar to the model of Jenskovszky et al., see Figure~\ref{fig:phase illustration}.
 
 % ***
 The {\it peripheral phase} \cite{kl94} provides an alternative to the above descriptions. Its parametrisation
@@ -104,7 +104,7 @@ It should be noted that the phase has decisive influence on the amplitude behavi
 \subsubsection{Coulomb-Nuclear Interference Formulae}
 \label{sec:cni interference}
 
-The {\bf simplified West-Yennie formula (SWY)} \cite{wy68} is derived in the framework of perturbative quantum field theory by evaluating the lowest-order Feynman diagrams that comprise both nuclear and Coulomb interactions. In this approach, the interference is reduced to an additional phase between the Coulomb and nuclear amplitudes. Moreover, several approximations were used in the derivation. First, in order to avoid integrating over off-mass-shell contributions to the nuclear amplitude (purely known), very slow variation of the nuclear amplitude phase was assumed: $\arg {\cal A}^{\rm N} \approx \hbox{const}$. Then, in order to obtain a closed-form expression, the exponential slope of the nuclear modulus
+The {\bf simplified West-Yennie formula (SWY)} \cite{wy68} is derived in the framework of perturbative quantum field theory by evaluating the lowest-order Feynman diagrams that comprise both nuclear and Coulomb interactions. In this approach, the interference is reduced to an additional phase between the Coulomb and nuclear amplitudes. Moreover, several approximations were used in the derivation. First, in order to avoid integrating over off-mass-shell contributions to the nuclear amplitude (poorly known), very slow variation of the nuclear amplitude phase was assumed: $\arg {\cal A}^{\rm N} \approx \hbox{const}$. Then, in order to obtain a closed-form expression, the exponential slope of the nuclear modulus
 \begin{equation}
 \label{eq:nuc slope}
 B^{\rm N}(t) = {\d \log |{\cal A}^{\rm N}|^2 \over \d t}
@@ -123,7 +123,7 @@ where $\alpha$ is the fine-structure constant and $\gamma \doteq 0.577$ the Eule
 \begin{center}
 \includegraphics{fig/cni_effect_illustration.pdf}
 \caption{%
-Illustration of the effects due to the Coulomb interaction, using KL formula. For SWY formula, the picture is similar, however it misses the effects at higher $|t|$. The curves show a response of the interference formula to different nuclear phases with a purely exponential nuclear modulus. The solid curves correspond to phases of the same shape (constant) but different values of $\rho$ (maximal response can be seen at $|t| \lesssim 0.01\un{GeV^2}$). Conversely, the dashed lines correspond to phases with fixed $\rho$ but various shapes (the same examples as in Figure~\ref{fig:phase illustration}), with response sizeable at $|t| \gtrsim 0.02\un{GeV^2}$.
+Illustration of the effects due to the Coulomb interaction, using the KL formula. For the SWY formula, the picture is similar, however it misses the effects at higher $|t|$. The curves show a response of the interference formula to different nuclear phases with a purely exponential nuclear modulus. The solid curves correspond to phases of the same shape (constant) but different values of $\rho$ (the maximal response can be seen at $|t| \lesssim 0.01\un{GeV^2}$). Conversely, the dashed lines correspond to phases with fixed $\rho$ but various shapes (the same examples as in Figure~\ref{fig:phase illustration}), with response sizeable at $|t| \gtrsim 0.02\un{GeV^2}$.
 }
 \label{fig:cni effect}
 \end{center}
@@ -144,29 +144,29 @@ The {\bf Kundr\' at-Lokaj\' i\v cek formula (KL)} \cite{kl94} was derived in an 
 \end{equation}
 where the $t$ integrations go over the entire kinematically allowed region.
 
-By analysing the formulae Eq.~(\ref{eq:int swy}) and (\ref{eq:int kl}), one can conclude that in the region where the nuclear amplitude dominates ($|t| \gtrsim 0.003\un{GeV^2}$), the effects due to the Coulomb interaction can be proportional either to $\alpha$ or to the ratio ${\cal A}^{\rm C} / {\cal A}^{\rm N}$. In both cases, the magnitude of the interference effects can be expected at a percent level, as shown in Figure~\ref{fig:cni effect}. The figure also shows that the effects at different $|t|$ probe different parts of the nuclear phase: maximum sensitivity to $\rho$ lies at very low $|t|$ while at higher $|t|$ the effects are sensitive to phase values at higher $|t|$. It can also be observed that for constant and standard phase (and can be generalised to Bailly, too) the effects are very similar, rather mild at higher $|t|$. This can be understood from a very limited variation of the phase at low $|t|$, which is the region contributing most to the integral in Eq.~(\ref{eq:int kl}). In contrary, the higher $|t|$ response to peripheral phases can have various forms, often similar to the ``U shape'' of the reconstructed cross-section, see Figures \ref{fig:fits common con} and \ref{fig:fits common per}.
+By analysing the formulae Eq.~(\ref{eq:int swy}) and (\ref{eq:int kl}), one can conclude that in the region where the nuclear amplitude dominates ($|t| \gtrsim 0.003\un{GeV^2}$), the effects due to the Coulomb interaction can be proportional either to $\alpha$ or to the ratio ${\cal A}^{\rm C} / {\cal A}^{\rm N}$. In both cases, the magnitude of the interference effects can be expected at a percent level, as shown in Figure~\ref{fig:cni effect}. The figure also shows that the effects at different $|t|$ probe different parts of the nuclear phase: maximum sensitivity to $\rho$ lies at very low $|t|$ while at higher $|t|$ the effects are sensitive to phase values at higher $|t|$. It can also be observed that for the constant and the standard phase (and can be generalised to Bailly, too) the effects are very similar and rather mild at higher $|t|$. This can be understood from a very limited variation of the phase at low $|t|$, which is the region contributing most to the integral in Eq.~(\ref{eq:int kl}). On the contrary, the higher $|t|$ response to peripheral phases can have various forms, often similar to the ``U shape'' of the reconstructed cross-section, see Figures~\ref{fig:fits common con} and~\ref{fig:fits common per}.
 
 
 
 
 %----------------------------------------------------------------------------------------------------
-\subsection{Parameter inference from data}
+\subsection{Parameter Inference from the Data}
 \label{sec:cni task discussion}
 
 As formalised in Section~\ref{sec:cni interference}, the observable cross-section can be split into two components: nuclear component (as in the limit $\alpha\to 0$) and CNI component (Coulomb effects as shown in Figure~\ref{fig:cni effect}).
 
-As a next task it would be desirable to exploit the measured data to make statements about the nuclear component (e.g.~determine $a$ related to the total cross-section, see Eq.~(\ref{eq:si tot})) and the CNI component (e.g.~determine $\rho$). For this, it is essential to be able to separate the two cross-section components, which in turn requires them to be sufficiently distinct. Failing that, would lead to a situation characterised by degeneracy, many possible data descriptions and thus non unique statements about the two components.
+As a next task it would be desirable to exploit the measured data to make statements about the nuclear component (e.g.~determine $a$ related to the total cross-section, see Eq.~(\ref{eq:si tot})) and the CNI component (e.g.~determine $\rho$). For this purpose it is essential to be able to separate the two cross-section components, which in turn requires them to be sufficiently distinct. Failing that, would lead to a situation characterised by degeneracy, many possible data descriptions and thus non unique statements about the two components.
 
 The task is technically achieved by fitting. Therefore one needs to introduce parametrisations for the variable elements of the cross-section description: nuclear modulus and phase. Here it is important to realise that the form of the parametrisations defines what features can possibly be observed in the nuclear and CNI components of the cross-section. Therefore, the parametrisations define the level of distinction between the two components. For example, giving too much flexibility to the parametrisations will necessarily make the nuclear and CNI cross-section components undistinguishable and lead to degeneracy in the fit results. This tends to be the case with the peripheral phase parametrisation, Eq.~(\ref{eq:nuc phase per}), and large $N_b$ in the nuclear modulus parametrisation, Eq.~(\ref{eq:nuc mod}). These considerations illustrate that the choice of the parametrisations is crucial. At the same time, there is no rigorous guide for the choice which makes it subjective and arbitrary.
 
-It is clear that not all possible nuclear modulus and phase parametrisations can be tested and therefore all results presented hereafter will have the character of examples. The choice of parametrisations in Section~\ref{sec:cni nuclear} is rather conservative and follows the guideline of minimal extensions with respect to previous TOTEM analyses \cite{8tev-90m}. It is easily conceivable to construct parametrisations that might yield few percent difference in parameters of interest, like $\rho$ or total cross-section. This applies mainly to the modulus parametrisation. Although at $|t| \gtrsim 0.02\un{GeV^2}$ the Coulomb effects are not large and thus the measured cross-section provides a good guide for parametrisations, at very low $|t|$ the measured data are dominated by the Coulomb interaction and no information on the nuclear component can be extracted. Consequently, the form of extrapolation to $t = 0$ is largely unconstrained. The uncertainty in nuclear phase might be less critical since the cross-section effects are limited by the KL/SWY interference formulae (see Figure~\ref{fig:cni effect}). This stems from the effects being predominantly sensitive to the nuclear phase at low $|t|$ and thus a large class of phase parametrisations could be reduced to a polynomial, by employing the Taylor expansion at $t = 0$.
+It is clear that not all possible nuclear modulus and phase parametrisations can be tested and therefore all results presented hereafter will have the character of examples. The choice of parametrisations in Section~\ref{sec:cni nuclear} is rather conservative and follows the guideline of minimal extensions with respect to previous TOTEM analyses \cite{8tev-90m}. It is easily conceivable to construct parametrisations that might yield few percent difference in parameters of interest, like $\rho$ or total cross-section. This applies mainly to the modulus parametrisation. Although at $|t| \gtrsim 0.02\un{GeV^2}$ the Coulomb effects are not large and thus the measured cross-section provides a good guide for parametrisations, at very low $|t|$ the measured data are dominated by the Coulomb interaction and no information on the nuclear component can be extracted. Consequently, the form of extrapolation to $t = 0$ is largely unconstrained. The uncertainty in nuclear phase might be less critical since the cross-section effects are limited by the KL/SWY interference formulae (see Figure~\ref{fig:cni effect}). This stems from the effects being predominantly sensitive to the nuclear phase at low $|t|$ and thus a large class of phase parametrisations could be reduced to polynomials by employing the Taylor expansion at $t = 0$.
 
 For the rest of the analysis, the following strategy has been adopted. Starting with the example parametrisations from Section~\ref{sec:cni nuclear}, the experimental data will be used to exclude the non-compatible ones. The rest will be used to present a matrix of conditional results, each valid for one of the chosen parametrisation assumptions.
 
 
 
 %----------------------------------------------------------------------------------------------------
-\subsection{Fitting techniques}
+\subsection{Fitting Techniques}
 \label{sec:cni fit techniques}
 
 As already anticipated, it is vital to include the $\beta^* = 90\un{m}$ data to the fits. Formally, the data vector $\vec D$ can thus consist of rows of Table~\ref{tab:data} and/or Table~3 in \cite{8tev-90m}. The corresponding uncertainty matrix $\mat V$ includes two components. The statistical one contains the statistical uncertainties from the data tables on the diagonal. The systematic uncertainty component can be obtained from Eq.~(\ref{eq:covar mat}) and Eq.~(14) in \cite{8tev-90m}, taking into account the (almost) full correlation between the normalisation uncertainties in the two data sets (both are calibrated to the same reference measurement \cite{prl111}).
@@ -208,12 +208,12 @@ By Monte-Carlo simulations, it has been verified that the quantity $\chi_{\rm PC
 
 %-----------
 
-Since both methods eventually rely on quantities with a chi-square distribution, the same fit quality measures can be quoted. In particular the p-value, that is the probability that a $\chi^2$ value at least as extreme as the observed one would be drawn from the corresponding chi-square distribution. The p-value can be conveniently expressed as significance which corresponds to a half-width of a central region that needs to be excluded from a normal distribution to give the same integrated probability as the p-value. The significance is given in multiples of $\sigma$, the standard deviation of the normal distribution.
+Since both methods eventually rely on quantities with a chi-square distribution, the same fit quality measures can be quoted. In particular the p-value, i.e. the probability that a $\chi^2$ value at least as extreme as the observed one would be drawn from the corresponding chi-square distribution. The p-value can be conveniently expressed as significance which corresponds to a half-width of a central region that needs to be excluded from a normal distribution to give the same integrated probability as the p-value. The significance is given in multiples of $\sigma$, the standard deviation of the normal distribution.
 
 
 
 %----------------------------------------------------------------------------------------------------
-\subsection{Common fits of 1000 and 90m data}
+\subsection{Common Fits of 1000\,m and 90\,m Data}
 \label{sec:cni common fits}
 
 This section presents results for fits where the $1000$ and $90\un{m}$ data act in equal manner. Technically, the data vector $\vec D$ consists of two sub-columns, one from each data sets.
@@ -298,11 +298,11 @@ where $a$ is the intercept of the nuclear modulus parametrisation, Eq.~(\ref{eq:
 
 There are several trends observable in the results. For the fits with constant phase, the values of $B^{\rm N}$ and $\rho$ increase with $N_b$. This can be understood from Figures~\ref{fig:cni effect} (constant phase cannot make any sizeable CNI effect at higher $|t|$) and \ref{fig:fits common con} (data have a ``U shape'' with respect to the reference exponential). Therefore, fits with $N_b = 1$ (looking almost as a straight line in the relative frame of Figure~\ref{fig:fits common con}) can only reflect a mean slope of the data, which is lower than a realistic one when extrapolated to $t = 0$. Consequently, adding more flexibility to the nuclear modulus ($N_b = 2, 3$) makes the fits absorb more of the ``U shape'' of the data and thus extrapolate to $t = 0$ with a higher value of the slope $B^{\rm N}$. A similar argumentation may applied to the trend of $\rho$ values. For positive values of $\rho$ the CNI effect leads to a negative interference (see Figure~\ref{fig:cni effect}) and thus $\rho$ can be deduced from the gap between data at low $|t|$ and the extrapolation from higher $|t|$ (where the strong constraint from the $90\un{m}$ data applies). Consequently, fits extrapolating to $t = 0$ too low yield also low values of $\rho$ (or even negative) and vice versa.
 
-In the case of fits with peripheral phase, the trend is less clear which can be expected from Figure~\ref{fig:cni effect} since the CNI effects can absorb large part of the ``U shape'' of the data.
+In the case of fits with peripheral phase, the trend is less clear which can be expected from Figure~\ref{fig:cni effect} since the CNI effects can absorb a large part of the ``U shape'' of the data.
 
 The total cross-section results are rather stable, with mild dependence on $N_b$ and phase choice (with a small exception of the combination of $N_b = 2$ with peripheral phase).
 
-Figure~\ref{fig:fits reciprocal der} also compares the newly derived parameters to previous TOTEM measurements and other predictions. For the total cross-section, the new results occur consistently little higher than the value from \cite{prl111}. This is fully expectable since now the CNI effects (most importantly the negative interference due to $\rho$) are taken into account. The diffractive slope comparison to the result from \cite{prl111} is more delicate. In the present analysis, the results correspond to the slope of the nuclear component at $t = 0$. In the previous analysis, however, mean slope (over the range $|t| < 0.2\un{GeV^2}$) of combined (C+N) cross-section was evaluated. Moreover, the previous analysis did not include the optics matching procedure as the present one. The latter fact is responsible for the shift of the previous central value (brown horizontal line) from the new results for $N_b = 1$ and constant phase (left-most column). In principle, one would expect that this difference is covered by the yellow uncertainty band, however one should remember that in the previous analysis it only corresponds to the mean slope. And the uncertainty would increase if extrapolation to $t = 0$ is included.
+Figure~\ref{fig:fits reciprocal der} also compares the newly derived parameters to previous TOTEM measurements and other predictions. For the total cross-section, the new results occur consistently little higher than the value from \cite{prl111}. This is fully expectable since now the CNI effects (most importantly the negative interference due to $\rho$) are taken into account. The diffractive slope comparison to the result from \cite{prl111} is more delicate. In the present analysis, the results correspond to the slope of the nuclear component at $t = 0$. In the previous analysis, however, the mean slope (over the range $|t| < 0.2\un{GeV^2}$) of the combined (C+N) cross-section was evaluated. Moreover, the previous analysis did not include the optics matching procedure like the present one. The latter fact is responsible for the shift of the previous central value (brown horizontal line) from the new results for $N_b = 1$ and constant phase (left-most column). In principle, one would expect that this difference is covered by the yellow uncertainty band, however one should remember that in the previous analysis it only corresponds to the mean slope. And the uncertainty would increase if extrapolation to $t = 0$ is included.
 %
 Regarding $\rho$, the figure provides comparison to the preferred-model estimate by COMPETE \cite{compete} which is obtained by extrapolation from lower scattering energies. The new results lie all below the COMPETE value.
 
@@ -310,14 +310,14 @@ Monte-Carlo studies show that uncertainties of $\rho$ in Table~\ref{tab:fits com
 %For the slope $B^{\rm N}$, the uncertainty depends strongly of the fit configuration and the statistical and systematic uncertainties contribute at various ratios.
 The uncertainties of $\sigma_{\rm tot}$ are mostly due to the normalisation uncertainty.
 
-Table \ref{tab:fits common} presents also RMS values of impact parameter, $b$, for elastic and inelastic collisions. These quantities indicate the character of the collisions in the impact parameter space and have been calculated according to Section 3 in~\cite{klk02}, directly from $t$-space quantities. One can conclude that irrespectively on $N_b$, the constant-phase fits have central character: elastic collisions occur at smaller impact parameters than the inelastic collisions. In contrary, all the fits with the peripheral nuclear phase lead to opposite (peripheral) hierarchy.
+Table \ref{tab:fits common} presents also RMS values of impact parameter, $b$, for elastic and inelastic collisions. These quantities indicate the character of the collisions in the impact parameter space and have been calculated according to Section 3 in~\cite{klk02}, directly from $t$-space quantities. One can conclude that irrespectively of $N_b$, the constant-phase fits have central character: elastic collisions occur at smaller impact parameters than the inelastic collisions. On the contrary, all the fits with the peripheral nuclear phase lead to opposite (peripheral) hierarchy.
 
 The fits have been repeated with electromagnetic form factors by Borkowski et al.~\cite{borkowski} instead the default one (see Section~\ref{sec:cni coulomb}) leading to no change in the results. Similarly, another set of fits has been performed with the high-$|t|$ component of the nuclear modulus (see Section~\ref{sec:cni nuclear}) scaled by a factor of $1.2$ (preliminary uncertainty estimate), again with no impact on the results.
 
 
 
 %----------------------------------------------------------------------------------------------------
-\subsection{Reciprocally constrained 1000 and 90m fits}
+\subsection{Reciprocally Constrained 1000\,m and 90\,m Fits}
 \label{sec:cni reciprocal fits}
 
 \begin{figure*}
@@ -334,13 +334,13 @@ In contrast to the previous section, here the $1000$ and $90\un{m}$ data sets ar
 \begin{itemize}
 \item Modulus ``normalisation'', parameter $a$ in Eq.~(\ref{eq:nuc mod}): both data set can be used equally well.
 \item Modulus ``shape'', parameters $b_n$ in Eq.~(\ref{eq:nuc mod}): essential contribution from the $90\un{m}$ data set with very low statistical uncertainties.
-\item Phase at $t = 0$, parameter $p_0$ in Eqs.~(\ref{eq:nuc phase con}) and (\ref{eq:nuc phase per}): as indicated in Figure~\ref{fig:cni effect}, maximum sensitivity to $p_0$ (or $\rho$) lies a $|t|$ region only available in the $1000\un{m}$ data set.
-\item Phase ``shape'' (only for peripheral phase), other parameters in Eq.~(\ref{eq:nuc phase per}): as for modulus shape, the $90\un{m}$ data set provides much stronger constrains.
+\item Phase at $t = 0$, parameter $p_0$ in Eqs.~(\ref{eq:nuc phase con}) and (\ref{eq:nuc phase per}): as indicated in Figure~\ref{fig:cni effect}, maximum sensitivity to $p_0$ (or $\rho$) lies in a $|t|$ region only available in the $1000\un{m}$ data set.
+\item Phase ``shape'' (only for peripheral phase), other parameters in Eq.~(\ref{eq:nuc phase per}): as for modulus shape, the $90\un{m}$ data set provides much stronger constraints.
 \end{itemize}
-Therefore, one may perform a sequence of two fits, one with $1000$ and the other with $90\un{m}$ data set, each of them fixing the parameters according to the breakdown above. Since there are two choices for the modulus normalisation, $a$, and one can start the fit sequence with either the $1000$ or the $90\un{m}$ data set, there are four variants of this approach, see Figure~\ref{fig:fits reciprocal der}. The fit sequence is repeated several times until convergence is reached.
+Technically, one performs a sequence of two separate fits, one with $1000$ and the other with $90\un{m}$ data set, each of them fixing the parameters according to the breakdown above. Since there are two choices for the modulus normalisation, $a$, and one can start the fit sequence with either the $1000$ or the $90\un{m}$ data set, there are four variants of this approach, see Figure~\ref{fig:fits reciprocal der}. This fit sequence is repeated several times until convergence is reached.
 
-Figure~\ref{fig:fits reciprocal der} presents a comparison of the fit results from methods presented in this section (reciprocal fits) and the previous section (common fits). For the fits with the peripheral phase parametrisation, all phase parameters have been free, consistently with the previous section). Generally, one can conclude very good agreement among all the fit methods and variants. The small differences, mostly visible in $\sigma_{\rm tot}$ results, follow the choice of the data set determining the normalisation $a$: see the red-magenta and blue-green point groups in the figure. The high sensitivity of the total cross-section is expectable since it directly depends on $a$, see Eq.~(\ref{eq:si tot}). Comparing the common fit results (black) with reciprocal fits (colours) indicates that the normalisation $a$ of the common fits is often strongly influenced by the $1000\un{m}$ data set. This is not surprising since $a$ corresponds to the modulus value at $t=0$ and the $1000\un{m}$ data extend to much lower $|t|$. This effect can be further magnified by the presence of additional degrees of freedom, as it happens for the combination $N_b = 3$ with peripheral phase parametrisation, where the fits with the $90\un{m}$ data set fixing the normalisation give results rather different from the common fits, not only in $\sigma_{\rm tot}$.
+Figure~\ref{fig:fits reciprocal der} presents a comparison of the fit results from methods presented in this section (reciprocal fits) and the previous section (common fits). For the fits with the peripheral phase parametrisation, all phase parameters have been free, consistently with the previous section. Generally, one can conclude very good agreement among all the fit methods and variants. The small differences, most visible in $\sigma_{\rm tot}$ results, follow the choice of the data set determining the normalisation $a$: see the red-magenta and blue-green point groups in the figure. The high sensitivity of the total cross-section is expectable since it directly depends on $a$, see Eq.~(\ref{eq:si tot}). Comparing the common fit results (black) with the reciprocal fits (colours) indicates that the normalisation $a$ of the common fits is often strongly influenced by the $1000\un{m}$ data set. This is not surprising since $a$ corresponds to the modulus value at $t=0$ and the $1000\un{m}$ data extend to much lower $|t|$. This effect can be further magnified by the presence of additional degrees of freedom, as it happens for the combination $N_b = 3$ with peripheral phase parametrisation, where the fits with the $90\un{m}$ data set fixing the normalisation give results rather different from the common fits, not only in $\sigma_{\rm tot}$.
 
-The fit results with $N_b = 2$ and peripheral phase parametrisation may seem a little to high (in all the three parameters) with respect to other combinations. The fits for this combination prefer solutions with exceptionally high CNI component: about $6\un{\%}$ at $t = 0.01\un{GeV^2}$ and rapidly decreasing at larger $|t|$. 
+The fit results with $N_b = 2$ and peripheral phase parametrisation may seem a little too high (in all the three parameters) with respect to other combinations. The fits for this combination prefer solutions with exceptionally high CNI component: about $6\un{\%}$ at $t = 0.01\un{GeV^2}$ and rapidly decreasing at larger $|t|$. 
 
 One can also see a trend in the fit qualities (significances): the quality of $1000\un{m}$ data fits (triangles up) tends to be worse than the one of $90\un{m}$ fits (triangles down). This effect has two sources. First, the $90\un{m}$ data fits can freely change ``shape'' of modulus (and phase, if applicable) and consequently the fit can better describe the data. Second source is a small difference between the two data sets. As can be seen from Figure~\ref{fig:fits common con} both data sets feature a ``U shape'' which however it seems more pronounced for the $1000\un{m}$ data: at $|t| \lesssim 0.06\un{GeV^2}$ and $|t| \gtrsim 0.11\un{GeV^2}$ the $1000\un{m}$ data points tend to lie above the $90\un{m}$ points and vice versa for intermediate $|t|$. Therefore fit functions with shape fixed by the $90\un{m}$ data feel some tension with respect to the $1000\un{m}$ data, reflected as a worse fit quality.
