--- a/2014/90m paper/authorlist_data.tex
+++ b/2014/90m paper/authorlist_data.tex
@@ -11,7 +11,7 @@
 	\AddAuthor{M.~Bozzo}{6a}{}{}%
 	\AddAuthor{A.~Buzzo}{6a}{}{}%
 	\AddAuthor{F.~S.~Cafagna}{5a}{}{}%
-	\AddAuthor{C.E.~Campanella}{5c}{5a}{}%
+	\AddAuthor{C.~E.~Campanella}{5c}{5a}{}%
 	\AddAuthor{M.~G.~Catanesi}{5a}{}{}%
 	\AddAuthor{M.~Csan\'{a}d}{4a}{}{}%
 	\AddAuthor{T.~Cs\"{o}rg\H{o}}{4a}{4b}{}%
@@ -20,9 +20,9 @@
 	\AddAuthor{A.~D'Orazio}{5c}{5a}{}%
 	\AddAuthor{M.~Doubek}{1c}{}{}%
 	\AddAuthor{K.~Eggert}{10}{}{}%
-	\AddAuthor{V.~Eremin}{}{}{d}%
+	\AddAuthor{V.~Eremin}{}{}{e}%
 	\AddAuthor{F.~Ferro}{6a}{}{}%
-	\AddAuthor{A. Fiergolski}{5a}{}{}%
+	\AddAuthor{A. Fiergolski}{5a}{}{d}%
 	\AddAuthor{F.~Garcia}{3a}{}{}%
 	\AddAuthor{V.~Georgiev}{1a}{}{}%
 	\AddAuthor{S.~Giani}{9}{}{}%
@@ -39,7 +39,7 @@
 	\AddAuthor{R.~Lauhakangas}{3a}{}{}%
 	\AddAuthor{E.~Lippmaa}{2}{}{}%
 	\AddAuthor{J.~Lippmaa}{2}{}{}%
-	\AddAuthor{M.~Lokaj\'{\i}\v{c}ek}{1b}{}{}%
+	\AddAuthor{M.~V.~Lokaj\'{\i}\v{c}ek}{1b}{}{}%
 	\AddAuthor{L.~Losurdo}{7b}{}{}%
 	\AddAuthor{M.~Lo~Vetere}{6b}{6a}{}%
 	\AddAuthor{F.~Lucas~Rodr\'{i}guez}{9}{}{}%
@@ -53,7 +53,7 @@
 	\AddAuthor{E.~Oliveri}{9}{}{}%
 	\AddAuthor{F.~Oljemark}{3a}{3b}{}%
 	\AddAuthor{R.~Orava}{3a}{3b}{}%
-	\AddAuthor{M.~Oriunno}{}{}{e}%
+	\AddAuthor{M.~Oriunno}{}{}{f}%
 	\AddAuthor{K.~\"{O}sterberg}{3a}{3b}{}%
 	\AddAuthor{P.~Palazzi}{9}{}{}%
 	\AddAuthor{V.~Passaro}{5c}{5a}{}%
@@ -68,7 +68,7 @@
 	\AddAuthor{F.~Ravotti}{9}{}{}%
 	\AddAuthor{E.~Robutti}{6a}{}{}%
 	\AddAuthor{L.~Ropelewski}{9}{}{}%
-	%\AddAuthor{C.~Royon}{}{}{f}%
+	%\AddAuthor{C.~Royon}{}{}{g}%
 	\AddAuthor{G.~Ruggiero}{9}{}{}%
 	\AddAuthor{H.~Saarikko}{3a}{3b}{}%
 	\AddAuthor{A.~Scribano}{7a}{}{}%
@@ -111,9 +111,10 @@
 	
 \def\DeclareExternalInstitutes{%
 	\AddExternalInstitute{a}{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria.}
-	\AddExternalInstitute{b}{Department of Atomic Physics, ELTE University - Budapest, Hungary.}
+	\AddExternalInstitute{b}{Department of Atomic Physics, ELTE University, Budapest, Hungary.}
 	\AddExternalInstitute{c}{Institute of Nuclear Physics, Polish Academy of Science, Krakow, Poland.}
-	\AddExternalInstitute{d}{Ioffe Physical - Technical Institute of Russian Academy of Sciences, St.~Petersburg, Russian Federation.}
-	\AddExternalInstitute{e}{SLAC National Accelerator Laboratory, Stanford CA, USA.}
-	%\AddExternalInstitute{f}{IRFU-SPP, CEA - Saclay, France}
+	\AddExternalInstitute{d}{Warsaw University of Technology, Warsaw, Poland.}
+	\AddExternalInstitute{e}{Ioffe Physical - Technical Institute of Russian Academy of Sciences, St.~Petersburg, Russian Federation.}
+	\AddExternalInstitute{f}{SLAC National Accelerator Laboratory, Stanford CA, USA.}
+	%\AddExternalInstitute{g}{IRFU-SPP, CEA - Saclay, France}
 }
