--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -41,6 +41,7 @@
 
 \title{Evidence for Non-Exponential Elastic Proton-Proton Differential Cross-Section at Low $|\hbox{t}|$ and $\sqrt{\hbox{s}}$ = 8 TeV by TOTEM}
 
+% TODO: check whether indexes i, l, 1 can be distinguished
 \input authorlist_npb
 
 \date{\today}
@@ -147,63 +148,7 @@ proton-proton interactions \sep elastic scattering \sep total cross-section \sep
 	\Name{J.~R.~Cudell~\etal{} (COMPETE Collaboration)}
 	\REVIEW{Phys.\ Rev.\ Lett.}{89}{2002}{201801}
 
-
-
-% TODO: remove the unnecessary references
-
-\iffalse
-\bibitem{1km}
-	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
-        Measurement of Elastic pp Scattering at $\sqrt{s}=8\,$TeV in the 
-        Coulomb-Nuclear Interference Region by the TOTEM Experiment at the 
-        CERN LHC, this journal.
-
-\bibitem{epl95}
-    %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001,CERN-PH-EP-2011-101 
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{95}{2011}{41001}
-
-
-\bibitem{epl101-inel}
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{101}{2013}{21003}
-
-\bibitem{epl101-tot}
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{101}{2013}{21004}
-
-\bibitem{jan_thesis}
-	\Name{Ka\v spar J.}
-	PhD Thesis, CERN-THESIS-2011-214, {\tt http://cdsweb.cern.ch/record/1441140}
-
-\bibitem{mario_ipac_2011}
-	\Name{Deile M.}
-	{\it The First 1 1/2 Years of TOTEM Roman Pot Operation at LHC}, in
-	{\it Proceedings of the 2nd International Particle Accelerator Conference (IPAC 2011), San Sebastian, Spain}. 
-	%{\tt http://accelconf.web.cern.ch/AccelConf/IPAC2011/papers/mopo011.pdf}
-	arXiv:1110.5808v1
-
-%\bibitem{pdg} 
-%	\Name{Nakamura K.~\etal{} (Particle Data Group)}
-%	\REVIEW{J.~Phys.}{G37}{2010}{075021}
-
-%\bibitem{B_vs_s}
-%	\Name{ISR (CR Collaboration)} \REVIEW{Phys.~Lett.}{B62}{1976}{460}; 
-%	\Name{ISR (ACHGT Collaboration)} \REVIEW{Phys.~Lett.}{B39}{1972}{663}; 
-%	\Name{ISR (R-211)} \REVIEW{Nucl.~Phys.}{B262}{1985}{689}; 
-%	\Name{ISR (R-210)} \REVIEW{Phys.~Lett.}{B115}{1982}{495}; 
-%	\Name{UA4} \REVIEW{Phys.~Lett.}{B147}{1984}{385}; 
-%	\Name{UA4} \REVIEW{Phys.~Lett.}{B127}{1983}{472} and \REVIEW{Phys. Lett.}{B198}{1987}{583}; 
-%	\Name{UA4/2} \REVIEW{Phys.~Lett.}{B316}{1993}{448}; 
-%	\Name{CDF} \REVIEW{Phys.~Rev.}{D50}{1994}{5518}; 
-%	\Name{E710} \REVIEW{Phys.~Rev.~Lett.}{68}{1992}{2433} and \REVIEW{Nuovo Cimento}{A106}{1992}{123}; 
-%	\Name{D0} D0 Note 6056-CONF; 
-%	\Name{pp2pp} \REVIEW{Phys.~Lett.}{B579}{2004}{245}
-
-\fi
-
 \end{thebibliography}
-
 
 
 \end{document}
